prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/invalid_string_interp_1.diag.txt
ERROR: unfinished string
testData/diagnostics/invalid_string_interp_1.nut:1:11

println($"{")
           ^-


